assets/queries/terraform/gcp/rdp_access_is_not_restricted/test/negative.tf
resource "google_compute_firewall" "rdp_not_allowed" {
  name    = "test-firewall"
  network = google_compute_network.default.name

  allow {
    protocol = "icmp"
  }

  allow {
    protocol = "tcp"
    ports    = ["80", "8080", "1000-2000"]
  }

  source_tags = ["web"]
}
